Dall sphere should not be recreated if destroyed in gravity well

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -364,7 +364,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="RPGPlayer.xml" />
-    <None Include="RPGShipScreens.xml" />
+    <None Include="RPGShipScreens.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="RPGTypes.xml" />
     <None Include="RPGWingmen.xml" />
     <None Include="RPGArmorDockScreens.xml">
