Artifact Awakening Progress

--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -367,6 +367,7 @@
   <ItemGroup>
     <ClCompile Include="CArtifactAICorePainter.cpp" />
     <ClCompile Include="CArtifactAwakenVisuals.cpp" />
+    <ClCompile Include="CArtifactStatPainter.cpp" />
     <ClCompile Include="CChooseAdventureSession.cpp" />
     <ClCompile Include="CDaimonButtonPainter.cpp" />
     <ClCompile Include="CDaimonList.cpp" />
