--- a/Transcendence/Transcendence.vcxproj.filters
+++ b/Transcendence/Transcendence.vcxproj.filters
@@ -275,6 +275,12 @@
     <ClCompile Include="CArtifactStatPainter.cpp">
       <Filter>Source Files\Artifact Awakening</Filter>
     </ClCompile>
+    <ClCompile Include="CArtifactResultPainter.cpp">
+      <Filter>Source Files\Artifact Awakening</Filter>
+    </ClCompile>
+    <ClCompile Include="CArtifactMessagePainter.cpp">
+      <Filter>Source Files\Artifact Awakening</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackgroundTasks.h">
