--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -375,5 +375,8 @@
     <Xml Include="Stormhound.xml">
       <Filter>Part I</Filter>
     </Xml>
+    <Xml Include="Benedict05.xml">
+      <Filter>Part I</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
