Storage.xml is user data

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Game/Debug.log
 Game/HighScores.xml
 Game/Settings.xml
 Game/Snapshots/
+Game/Storage.xml
 Game/TransData.xml
 Game/[Tt]emp.txt
 Game/[Tt]emp[0-9].txt
