--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -419,8 +419,11 @@
     <None Include="Ovoids.xml">
       <SubType>Designer</SubType>
     </None>
-    <Xml Include="Benedict04.xml" />
+    <Xml Include="Benedict04.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="Benedict05.xml" />
+    <Xml Include="CommonwealthShips.xml" />
     <Xml Include="CompatibilityLibrary.xml" />
     <Xml Include="CoreFireEffects.xml">
       <SubType>Designer</SubType>
@@ -450,7 +453,9 @@
     <Xml Include="StdMiningEquipment.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="Stormhound.xml" />
+    <Xml Include="Stormhound.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
