--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -381,5 +381,14 @@
     <Xml Include="CommonwealthShips.xml">
       <Filter>Human Space Library</Filter>
     </Xml>
+    <Xml Include="HugoSandoval.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="Benedict05A.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="Benedict06.xml">
+      <Filter>Part I</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
